[package]
name = "my-control-box"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
input-rs = { version = "0.2.5", features = ["yew"] }

control-box = { git = "https://github.com/almedso/control-box.git", branch = "devel", features = [ "std" ]}
simulator = { git = "https://github.com/almedso/control-box.git", branch = "devel" }

rand = "0.9.2"
num-traits = "0.2.19"
ndarray = "0.15.6"
log = "0.4.27"
# required to make rand crate work in wasm context
getrandom = { version = "0.3.3", features = ["wasm_js"] }


